Fixed wrong padding placement

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -71,7 +71,7 @@ ul {
 }
 
 .content-wrapper {
-	margin: 16px auto;
+	margin: 0 auto;
 	max-width: var(--content-width);
 	font-size: 0;
 }
@@ -80,6 +80,7 @@ body > .content-wrapper {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(calc((var(--content-width) - 32px) / 3), 1fr));
 	grid-gap: 16px;
+	margin: 16px auto;
 }
 
 header li {
